--- a/index.html
+++ b/index.html
@@ -82,9 +82,11 @@
     const noBtn = document.getElementById("no");
 
     noBtn.addEventListener("mouseover", () => {
-      const x = Math.random() * 200 - 100;
-      const y = Math.random() * 200 - 100;
-      noBtn.style.transform = `translate(${x}px, ${y}px)`;
+    const x = Math.random() * window.innerWidth - window.innerWidth / 2;
+    const y = Math.random() * window.innerHeight - window.innerHeight / 2;
+
+          noBtn.style.position = "absolute";
+    noBtn.style.transform = `translate(${x}px, ${y}px)`;
     });
 
     function sayYes() {
