--- a/index.html
+++ b/index.html
@@ -82,10 +82,9 @@
     const noBtn = document.getElementById("no");
 
     noBtn.addEventListener("mouseover", () => {
-      const x = Math.random() * 200 - 100;
-      const y = Math.random() * 200 - 100;
-      noBtn.style.transform = `translate(${x}px, ${y}px)`;
-    });
+      const x = Math.random() * 400 - 200;
+      const y = Math.random() * 400 - 200;
+    noBtn.style.transform = `translate(${x}px, ${y}px) rotate(${Math.random() * 20 - 10}deg)`;
 
     function sayYes() {
       document.body.innerHTML = `
