--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>San Valentín 💘</title>
+  <title>San Valentín</title>
   <style>
     * {
       box-sizing: border-box;
@@ -82,9 +82,9 @@
     const noBtn = document.getElementById("no");
 
     noBtn.addEventListener("mouseover", () => {
-      const x = Math.random() * 400 - 200;
-      const y = Math.random() * 400 - 200;
-    noBtn.style.transform = `translate(${x}px, ${y}px) rotate(${Math.random() * 20 - 10}deg)`;
+      const x = Math.random() * 500 - 250;
+      const y = Math.random() * 500 - 250;
+    noBtn.style.transform = `translate(${x}px, ${y}px) rotate(${Math.random() * 30 - 15}deg)`;
   });
     
     function sayYes() {
