--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           font-family:'Segoe UI', system-ui, sans-serif;
           text-align:center;
         ">
-          <h1 style="color:white; font-size:2.5rem;">
+          <h1 style="font-size:2.5rem;">
             Sabía que dirías que sí
           </h1>
         </div>
