--- a/ruta-san-valentin.html
+++ b/ruta-san-valentin.html
@@ -7,7 +7,7 @@
 <style>
   body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background: linear-gradient(135deg, #ff9a9e, #fad0c4);
+    background:linear-gradient(135deg, #efeac4, #ffffff);
     color: #fff;
     margin: 0;
     padding: 0;
@@ -22,7 +22,7 @@
     font-family: 'Cursive', sans-serif;
   }
   .pista {
-    background: rgba(255, 255, 255, 0.1);
+    background: #dd4c4c;
     border-radius: 15px;
     padding: 20px;
     margin: 20px 0;
