--- a/pista1.html
+++ b/pista1.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Pista 1 - Doble & Gilda</title>
+  <title>Pista 1</title>
   <style>
     * {
       box-sizing: border-box;
