--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           text-align:center;
         ">
           <h1 style="font-size:2.5rem; color:#c72c41;">
-            Sabía que dirías que sí
+            Sabía que dirías que sí </br> <small>(Pronto tendrás noticias)</small>
           </h1>
         </div>
       `;
