--- a/index.html
+++ b/index.html
@@ -100,10 +100,14 @@
           background:linear-gradient(135deg, #fdfaf6, #f5efe8);
           font-family:'Segoe UI', system-ui, sans-serif;
           text-align:center;
+          flex-direction: column;
         ">
-          <h1 style="font-size:2.5rem; color:#c72c41;">
-            Sabía que dirías que sí </br> <small>(Pronto tendrás noticias)</small>
+          <h1 style="font-size:2.5rem; color:#c72c41; margin-bottom: 20px;">
+            Sabía que dirías que sí
           </h1>
+          <p style="font-size:1rem; color:#c72c41; margin:0;">
+            (Pronto tendrás noticias)
+          </p>
         </div>
       `;
     }
@@ -111,4 +115,3 @@
 
 </body>
 </html>
-
