--- a/ruta-san-valentin.html
+++ b/ruta-san-valentin.html
@@ -88,4 +88,23 @@
     <div class="pista">
       <h2>Pista 2: La Gildería</h2>
       <p class="emoji">🍷🫒</p>
-      <p>Sigue las coordenadas para encontrar un lugar castizo de La Latina, donde el vermú y
+       <p>Sigue las coordenadas para encontrar un lugar castizo de La Latina, donde el vermú y las gildas hacen un guiño.</p>
+      <p class="coords">40.409178, -3.711505</p>
+    </div>
+
+    <div class="pista">
+      <h2>Pista 3: Gilda Haus</h2>
+      <p class="emoji">🎶🍸🫒</p>
+      <p>Gildas con ritmo y cocteles con música. Un “hogar” moderno donde la gilda y la noche comparten la vida. Calle de San Mateo.</p>
+    </div>
+
+    <div class="pista">
+      <h2>Pista 4: Salmon Guru</h2>
+      <p class="emoji">🐟🍹🎨</p>
+      <p>Donde los peces no nadan, pero los cócteles sí son arte. Busca el templo de mezclas en Echegaray.</p>
+    </div>
+
+  </div>
+
+</body>
+</html>
