--- a/ruta-san-valentin.html
+++ b/ruta-san-valentin.html
@@ -95,13 +95,13 @@
     <div class="pista">
       <h2>Pista 3: Gilda Haus</h2>
       <p class="emoji">🎶🍸🫒</p>
-      <p>Gildas con ritmo y cocteles con música. Un “hogar” moderno donde la gilda y la noche comparten la vida. Calle de San Mateo.</p>
+      <p>Gildas con ritmo y cocteles con música. Un <p class="coords">“HAUS”</p> moderno donde la gilda y la noche comparten la vida. Calle de San Mateo.</p>
     </div>
 
     <div class="pista">
       <h2>Pista 4: Salmon Guru</h2>
       <p class="emoji">🐟🍹🎨</p>
-      <p>Donde los peces no nadan, pero los cócteles sí son arte. Busca el templo de mezclas en Echegaray.</p>
+      <p>Donde los peces no nadan, pero los cócteles sí son arte. Busca el templo de mezclas en <p class="coords">Echegaray</p>.
     </div>
 
   </div>
