--- a/pista2.html
+++ b/pista2.html
@@ -13,35 +13,44 @@
     body {
       margin: 0;
       height: 100vh;
-      background: linear-gradient(135deg, #c72c41, #f5e9e0);
+      background: linear-gradient(135deg, #fdfaf6, #f5efe8); /* blanco roto */
       display: flex;
       align-items: center;
       justify-content: center;
+      padding: 20px;
     }
 
     .card {
-      background: white;
+      background: #fdfaf6; /* blanco roto */
       padding: 40px 30px;
       border-radius: 20px;
       box-shadow: 0 20px 40px rgba(0,0,0,0.15);
       text-align: center;
       max-width: 350px;
       width: 90%;
+      border: 2px solid #c72c41; /* carmesí oscuro */
     }
 
     h1 {
       margin-bottom: 20px;
-      color: #c72c41;
+      color: #c72c41; /* carmesí oscuro */
     }
 
     p {
       color: #555;
       font-size: 1.1rem;
+      margin: 10px 0;
     }
 
     .emoji {
       font-size: 2rem;
       margin-bottom: 15px;
+    }
+
+    .coords {
+      font-weight: bold;
+      font-family: monospace;
+      color: #c72c41;
     }
   </style>
 </head>
@@ -51,7 +60,7 @@
     <h1>Pista 2</h1>
     <div class="emoji">🍷🫒</div>
     <p>Sigue las coordenadas para encontrar un lugar castizo de La Latina, donde el vermú y las gildas hacen un guiño.</p>
-    <p class="coords"><strong>40.409178, -3.711505</strong></p>
+    <p class="coords">40.409178, -3.711505</p>
   </div>
 
 </body>
