--- a/pista3.html
+++ b/pista3.html
@@ -13,35 +13,42 @@
     body {
       margin: 0;
       height: 100vh;
-      background: linear-gradient(135deg, #c72c41, #f5e9e0);
+      background: linear-gradient(135deg, #fdfaf6, #f5efe8); /* blanco roto */
       display: flex;
       align-items: center;
       justify-content: center;
+      padding: 20px;
     }
 
     .card {
-      background: white;
+      background: #fdfaf6; /* blanco roto */
       padding: 40px 30px;
       border-radius: 20px;
       box-shadow: 0 20px 40px rgba(0,0,0,0.15);
       text-align: center;
       max-width: 350px;
       width: 90%;
+      border: 2px solid #c72c41; /* carmesí oscuro */
     }
 
     h1 {
       margin-bottom: 20px;
-      color: #c72c41;
+      color: #c72c41; /* carmesí oscuro */
     }
 
     p {
       color: #555;
       font-size: 1.1rem;
+      margin: 10px 0;
     }
 
     .emoji {
       font-size: 2rem;
       margin-bottom: 15px;
+    }
+
+    strong {
+      color: #c72c41;
     }
   </style>
 </head>
@@ -50,7 +57,7 @@
   <div class="card">
     <h1>Pista 3</h1>
     <div class="emoji">🎶🍸🫒</div>
-    <p>Gildas con ritmo y cocteles con música. Un <strong>“HAUS”</strong> moderno donde la <strong>gilda</strong> y la noche comparten la vida.
+    <p>Gildas con ritmo y cócteles con música. Un <strong>“HAUS”</strong> moderno donde la <strong>gilda</strong> y la noche comparten la vida.</p>
   </div>
 
 </body>
