--- a/pista2.html
+++ b/pista2.html
@@ -61,6 +61,9 @@
     <div class="emoji">🍷🫒</div>
     <p>Sigue las coordenadas para encontrar un lugar castizo de La Latina, donde el vermú y las gildas hacen un guiño.</p>
     <p class="coords">40.409178, -3.711505</p>
+    <button class="route-button" onclick="location.href='pista3.html'">
+      Siguiente pista
+    </button>
   </div>
 
 </body>
