--- a/pista2.html
+++ b/pista2.html
@@ -64,6 +64,26 @@
     <button class="route-button" onclick="location.href='pista3.html'">
       Siguiente pista
     </button>
+    <style>
+      .route-button {
+        background: #c72c41;           /* carmesí oscuro */
+        color: #fdfaf6;                /* blanco roto */
+        border: 2px solid #c72c41;     /* borde carmesí */
+        border-radius: 30px;            /* redondeado elegante */
+        padding: 12px 25px;
+        font-size: 1rem;
+        font-family: 'Segoe UI', system-ui, sans-serif;
+        cursor: pointer;
+        transition: all 0.2s ease;
+        margin-top: 20px;
+        display: inline-block;
+      }
+    
+      .route-button:hover {
+        background: #a72635;           /* un poco más oscuro al hover */
+        transform: scale(1.05);
+      }
+    </style>
   </div>
 
 </body>
