--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
     #passwordBox {
       margin-top: 20px;
       padding: 15px;
-      border: 2px solid #c72c41;
-      border-radius: 15px;
+      //border: 2px solid #c72c41;
+      //border-radius: 15px;
       font-size: 1rem;
       color: #c72c41;
       background: #fdfaf6;
