--- a/index.html
+++ b/index.html
@@ -94,8 +94,9 @@
       <button id="yes" onclick="sayYes()">Sí</button>
       <button id="no">No</button>
     </div>
+  </div>
 
-    <!-- CUADRO CONTRASEÑA PARCIAL -->
+  <div class="card">
     <div id="passwordBox"></div>
   </div>
 
