--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      flex-direction: column;
     }
 
     .card {
@@ -28,6 +29,7 @@
       max-width: 350px;
       width: 90%;
       border: 2px solid #c72c41;
+      margin-bottom: 20px;
     }
 
     h1 {
@@ -71,8 +73,8 @@
     #passwordBox {
       margin-top: 20px;
       padding: 15px;
-      //border: 2px solid #c72c41;
-      //border-radius: 15px;
+      border: 2px solid #c72c41;
+      border-radius: 15px;
       font-size: 1rem;
       color: #c72c41;
       background: #fdfaf6;
@@ -84,7 +86,7 @@
 <body>
 
   <div class="card">
-    <h1>Feli</h1></br>
+    <h1>Feli</h1>
     <h1>¿Quieres ser mi San Valentín?</h1>
 
     <!-- CONTADOR -->
@@ -96,6 +98,7 @@
     </div>
   </div>
 
+  <!-- CUADRO CONTRASEÑA PARCIAL -->
   <div class="card">
     <div id="passwordBox"></div>
   </div>
@@ -120,22 +123,26 @@
 
       const days = Math.ceil(diff / (1000 * 60 * 60 * 24));
 
+      // Actualizamos siempre el contador
+      if (diff > 0) {
+        countdownEl.textContent = `Faltan ${days} días para San Valentín`;
+      } else {
+        countdownEl.textContent = "¡Ya llegó San Valentín!";
+      }
+
       // Mostrar contraseña parcial según días
       if (days <= 0) {
-        passwordBox.textContent = "Contraseña: VAS MAS PERDIDA QUE PULPO1";
+        passwordBox.textContent = "Contraseña: VAS MAS PERDIDO QUE PULPO1";
       } else if (days === 1) {
-        passwordBox.textContent = "Contraseña: VAS MAS PERDIDA QUE";
+        passwordBox.textContent = "Contraseña: VAS MAS PERDIDO QUE";
       } else if (days === 2) {
-        passwordBox.textContent = "Contraseña: VAS MAS PERDIDA";
+        passwordBox.textContent = "Contraseña: VAS MAS PERDIDO";
       } else if (days === 3) {
         passwordBox.textContent = "Contraseña: VAS MAS";
       } else if (days === 4) {
         passwordBox.textContent = "Contraseña: VAS";
       } else {
-        const hours = Math.floor((diff / (1000 * 60 * 60)) % 24);
-        const minutes = Math.floor((diff / (1000 * 60)) % 60);
-        const seconds = Math.floor((diff / 1000) % 60);
-        countdownEl.textContent = `${days}:${hours}:${minutes}:${seconds}`;
+        passwordBox.textContent = "";
       }
     }
 
@@ -201,12 +208,12 @@
       const input = document.getElementById("passwordInput").value.trim().toUpperCase();
       const result = document.getElementById("result");
 
-      const correctPassword = "VAS MAS PERDIDA QUE PULPO1";
+      const correctPassword = "VAS MAS PERDIDO QUE PULPO1";
 
       // Desaparece input y botón y muestra mensaje de paciencia
       document.getElementById("passwordInput").style.display = "none";
       document.getElementById("tryBtn").style.display = "none";
-      result.textContent = "Ten paciencia… mañana tendras otra palabra";
+      result.textContent = "⏳ Ten paciencia… mañana tendrás otra palabra";
 
       // Si es correcta, redirige en otra pestaña
       if (input === correctPassword) {
