--- a/index.html
+++ b/index.html
@@ -121,22 +121,26 @@
       const now = new Date();
       const diff = targetDate - now;
 
-      const days = Math.ceil(diff / (1000 * 60 * 60 * 24));
+      const days = Math.floor(diff / (1000 * 60 * 60 * 24));
+      const hours = Math.floor((diff / (1000 * 60 * 60)) % 24); 
+      const minutes = Math.floor((diff / (1000 * 60)) % 60); 
+      const seconds = Math.floor((diff / 1000) % 60);
+      const milliseconds = diff % 1000;
 
       // Actualizamos siempre el contador
       if (diff > 0) {
-        countdownEl.textContent = `Faltan ${days} días para San Valentín`;
+        countdownEl.textContent = `${days}:${hours}:${minutes}:${seconds}:${milliseconds}`;
       } else {
         countdownEl.textContent = "¡Ya llegó San Valentín!";
       }
 
       // Mostrar contraseña parcial según días
       if (days <= 0) {
-        passwordBox.textContent = "Contraseña: VAS MAS PERDIDO QUE PULPO1";
+        passwordBox.textContent = "Contraseña: VAS MAS PERDIDA QUE PULPO1";
       } else if (days === 1) {
-        passwordBox.textContent = "Contraseña: VAS MAS PERDIDO QUE";
+        passwordBox.textContent = "Contraseña: VAS MAS PERDIDA QUE";
       } else if (days === 2) {
-        passwordBox.textContent = "Contraseña: VAS MAS PERDIDO";
+        passwordBox.textContent = "Contraseña: VAS MAS PERDIDA";
       } else if (days === 3) {
         passwordBox.textContent = "Contraseña: VAS MAS";
       } else if (days === 4) {
@@ -208,12 +212,12 @@
       const input = document.getElementById("passwordInput").value.trim().toUpperCase();
       const result = document.getElementById("result");
 
-      const correctPassword = "VAS MAS PERDIDO QUE PULPO1";
+      const correctPassword = "VAS MAS PERDIDA QUE PULPO1";
 
       // Desaparece input y botón y muestra mensaje de paciencia
       document.getElementById("passwordInput").style.display = "none";
       document.getElementById("tryBtn").style.display = "none";
-      result.textContent = "⏳ Ten paciencia… mañana tendrás otra palabra";
+      result.textContent = "Ten paciencia… mañana tendrás otra palabra";
 
       // Si es correcta, redirige en otra pestaña
       if (input === correctPassword) {
