--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       const hours = Math.floor((diff / (1000 * 60 * 60)) % 24); 
       const minutes = Math.floor((diff / (1000 * 60)) % 60); 
       const seconds = Math.floor((diff / 1000) % 60);
-      const milliseconds = diff % 1000;
+      const milliseconds = Math.floor(diff / 1000);
 
       // Actualizamos siempre el contador
       if (diff > 0) {
