--- a/index.html
+++ b/index.html
@@ -125,11 +125,10 @@
       const hours = Math.floor((diff / (1000 * 60 * 60)) % 24); 
       const minutes = Math.floor((diff / (1000 * 60)) % 60); 
       const seconds = Math.floor((diff / 1000) % 60);
-      const milliseconds = Math.floor(diff / 1000);
 
       // Actualizamos siempre el contador
       if (diff > 0) {
-        countdownEl.textContent = `${days}:${hours}:${minutes}:${seconds}:${milliseconds}`;
+        countdownEl.textContent = `<strong>${days}:${hours}:${minutes}:${seconds}</strong>`;
       } else {
         countdownEl.textContent = "¡Ya llegó San Valentín!";
       }
