--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <h1>¿Quieres ser mi San Valentín?</h1>
 
     <!-- CONTADOR -->
-    <p id="countdown" style="color:#c72c41; font-size:1rem; margin-bottom:30px;"></p>
+    <strong></strong><p id="countdown" style="color:#c72c41; font-size:1rem; margin-bottom:30px;"></p></strong>
 
     <div class="buttons">
       <button id="yes" onclick="sayYes()">Sí</button>
@@ -128,9 +128,9 @@
 
       // Actualizamos siempre el contador
       if (diff > 0) {
-        countdownEl.textContent = `<strong>${days}:${hours}:${minutes}:${seconds}</strong>`;
+        countdownEl.textContent = `${days}:${hours}:${minutes}:${seconds}`;
       } else {
-        countdownEl.textContent = "¡Ya llegó San Valentín!";
+        countdownEl.textContent = "";
       }
 
       // Mostrar contraseña parcial según días
