--- a/index.html
+++ b/index.html
@@ -135,15 +135,15 @@
 
       // Mostrar contraseña parcial según días
       if (days <= 0) {
-        passwordBox.textContent = "Contraseña: VAS MAS PERDIDA QUE PULPO1";
-      } else if (days === 1) {
-        passwordBox.textContent = "Contraseña: VAS MAS PERDIDA QUE";
-      } else if (days === 2) {
-        passwordBox.textContent = "Contraseña: VAS MAS PERDIDA";
-      } else if (days === 3) {
-        passwordBox.textContent = "Contraseña: VAS MAS";
-      } else if (days === 4) {
-        passwordBox.textContent = "Contraseña: VAS";
+        passwordBox.textContent = "Contraseña: EL CALCETIN DE PAPELES DE MI TIA PAQUI";
+      } else if (days == 1) {
+        passwordBox.textContent = "Contraseña: EL CALCETIN DE PAPELES";
+      } else if (days == 2) {
+        passwordBox.textContent = "Contraseña: EL CALCETIN DE";
+      } else if (days == 3) {
+        passwordBox.textContent = "Contraseña: EL CALCETIN";
+      } else if (days == 4) {
+        passwordBox.textContent = "Contraseña: EL";
       } else {
         passwordBox.textContent = "";
       }
@@ -211,7 +211,7 @@
       const input = document.getElementById("passwordInput").value.trim().toUpperCase();
       const result = document.getElementById("result");
 
-      const correctPassword = "VAS MAS PERDIDA QUE PULPO1";
+      const correctPassword = "07022026";
 
       // Desaparece input y botón y muestra mensaje de paciencia
       document.getElementById("passwordInput").style.display = "none";
