--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <h1>¿Quieres ser mi San Valentín?</h1>
 
     <!-- CONTADOR -->
-    <strong><p id="countdown" style="color:##e98693; font-size:1.5rem; margin-bottom:30px;"></p></strong>
+    <strong><p id="countdown" style="color:#e98693; font-size:1.5rem; margin-bottom:30px;"></p></strong>
 
     <div class="buttons">
       <button id="yes" onclick="sayYes()">Sí</button>
