--- a/pista1.html
+++ b/pista1.html
@@ -60,7 +60,7 @@
     <p>Aquí comienza el aperitivo, donde aceitunas, anchoas y picante viven.</p>
     <p>Busca la casa donde la <strong>gilda</strong> dobla su encanto en Chamberí.</p>
     <p><strong>Dirección:</strong> Calle de Santa Engracia, 105</p>
-    <button class="route-button" onclick="location.href='pista2.html'">
+    <button class="route-button" onclick="window.open('pista2.html', '_blank')">
       Siguiente pista
     </button>
 
