--- a/pista3.html
+++ b/pista3.html
@@ -58,7 +58,7 @@
     <h1>Pista 3</h1>
     <div class="emoji">🎶🍸🫒</div>
     <p>Gildas con ritmo y cócteles con música. Un <strong>“HAUS”</strong> moderno donde la <strong>gilda</strong> y la noche comparten la vida.</p>
-    <button class="route-button" onclick="location.href='pista4.html'">
+    <button class="route-button" onclick="window.open('pista4.html', '_blank')">
       Siguiente pista
     </button>
     <style>
