--- a/pista2.html
+++ b/pista2.html
@@ -59,8 +59,8 @@
   <div class="card">
     <h1>Pista 2</h1>
     <div class="emoji">🍷🫒</div>
-    <p>Sigue las coordenadas para encontrar un lugar castizo de La Latina, donde el vermú y las gildas hacen un guiño.</p>
-    <p class="coords">40.409178, -3.711505</p>
+    <p>Sigue las coordenadas para encontrar un lugar castizo donde Madrid se vuelve costumbre y las cañas saben a “de siempre”.</p>
+    <p class="coords">40.43176, -3.70085</p>
     <button class="route-button" onclick="window.open('pista3.html', '_blank')">
       Siguiente pista
     </button>
