--- a/pista4.html
+++ b/pista4.html
@@ -57,7 +57,7 @@
   <div class="card">
     <h1>Pista 4</h1>
     <div class="emoji">🐟🍹🎨</div>
-    <p>Donde los peces no nadan, pero los cócteles sí son arte. Busca el templo de mezclas en <strong>Echegaray</strong>.</p>
+    <p>Donde el <strong>salmon</strong> no nada, pero los cócteles sí son arte. Busca el templo <strong>guru</strong> de mezclas en <strong>Echegaray</strong>.</p>
   </div>
 
 </body>
