Update and rename pista1.html to doble_&_gilda.html

--- a/doble_&_gilda.html
+++ b/doble_&_gilda.html
@@ -60,7 +60,7 @@
     <p>Aquí comienza el aperitivo, donde aceitunas, anchoas y picante viven.</p>
     <p>Busca la casa donde la <strong>GILDA</strong> dobla su encanto en Chamberí.</p>
     <p><strong>Dirección:</strong> Calle de Santa Engracia, 105</p>
-    <button class="route-button" onclick="window.open('pista2.html', '_blank')">
+    <button class="route-button" onclick="window.open('la_gilderia.html', '_blank')">
       Siguiente pista
     </button>
 
