--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 
       // Si es correcta, redirige en otra pestaña
       if (input === correctPassword) {
-        window.open("pista1.html", "_blank");
+        window.open("doble_&_gilda.html", "_blank");
       }
     }
 
