--- a/ruta.html
+++ b/ruta.html
@@ -80,9 +80,10 @@
 
     <div class="pista">
       <h2>Pista 1: Doble & Gilda</h2>
-      <p class="emoji">🫒🍺</p>
-      <p>Aquí comienza el aperitivo, donde aceitunas, anchoas y picante viven. Busca la casa donde la <strong>gilda</strong> dobla su encanto en Chamberí.</p>
-      <p class="coords">Calle de Santa Engracia, 105</p>
+      <div class="emoji">🫒🍺</div>
+    <p>Aquí comienza el aperitivo, donde aceitunas, anchoas y picante viven.</p>
+    <p>Busca la casa donde la <strong>GILDA</strong> dobla su encanto en Chamberí.</p>
+    <p><strong>Dirección:</strong> Calle de Santa Engracia, 105</p>
     </div>
 
     <div class="pista">
