--- a/ruta.html
+++ b/ruta.html
@@ -88,9 +88,9 @@
 
     <div class="pista">
       <h2>Pista 2: La Gildería</h2>
-      <p class="emoji">🍷🫒</p>
-       <p>Sigue las coordenadas para encontrar un lugar castizo de La Latina, donde el vermú y las gildas hacen un guiño.</p>
-      <p class="coords">40.409178, -3.711505</p>
+     <div class="emoji">🍷🫒</div>
+    <p>Sigue las coordenadas para encontrar un lugar castizo donde Madrid se vuelve costumbre y las cañas saben a “de siempre”.</p>
+    <p class="coords">40.43176, -3.70085</p>
     </div>
 
     <div class="pista">
