--- a/ruta.html
+++ b/ruta.html
@@ -81,28 +81,25 @@
     <div class="pista">
       <h2>Pista 1: Doble & Gilda</h2>
       <div class="emoji">🫒🍺</div>
-    <p>Aquí comienza el aperitivo, donde aceitunas, anchoas y picante viven.</p>
-    <p>Busca la casa donde la <strong>GILDA</strong> dobla su encanto en Chamberí.</p>
-    <p><strong>Dirección:</strong> Calle de Santa Engracia, 105</p>
+    <p class="coords">Calle de Sta Engracia, 105, Chamberí, 28010 Madrid</p>
     </div>
 
     <div class="pista">
       <h2>Pista 2: La Gildería</h2>
      <div class="emoji">🍷🫒</div>
-    <p>Sigue las coordenadas para encontrar un lugar castizo donde Madrid se vuelve costumbre y las cañas saben a “de siempre”.</p>
-    <p class="coords">40.43176, -3.70085</p>
+    <p class="coords">C. de Trafalgar, 15, Chamberí, 28010 Madrid</p>
     </div>
 
     <div class="pista">
       <h2>Pista 3: Gilda Haus</h2>
       <p class="emoji">🎶🍸🫒</p>
-      <p>Gildas con ritmo y cocteles con música. Un <p class="coords">“HAUS”</p> moderno donde la gilda y la noche comparten la vida. Calle de San Mateo.</p>
+      <p class="coords">C. de San Mateo, 6, Centro, 28004 Madrid</p>
     </div>
 
     <div class="pista">
       <h2>Pista 4: Salmon Guru</h2>
       <p class="emoji">🐟🍹🎨</p>
-      <p>Donde los peces no nadan, pero los cócteles sí son arte. Busca el templo de mezclas en <p class="coords">Echegaray</p>.
+      <p class="coords">Calle de Echegaray, 21, Centro, 28014 Madrid</p>.
     </div>
 
   </div>
