--- a/ruta.html
+++ b/ruta.html
@@ -87,19 +87,19 @@
     <div class="pista">
       <h2>Pista 2: La Gildería</h2>
      <div class="emoji">🍷🫒</div>
-    <p class="coords">C. de Trafalgar, 15, Chamberí, 28010 Madrid</p>
+    <p class="coords">Calle de Trafalgar, 15, Chamberí, 28010 Madrid</p>
     </div>
 
     <div class="pista">
       <h2>Pista 3: Gilda Haus</h2>
       <p class="emoji">🎶🍸🫒</p>
-      <p class="coords">C. de San Mateo, 6, Centro, 28004 Madrid</p>
+      <p class="coords">Calle de San Mateo, 6, Centro, 28004 Madrid</p>
     </div>
 
     <div class="pista">
       <h2>Pista 4: Salmon Guru</h2>
       <p class="emoji">🐟🍹🎨</p>
-      <p class="coords">Calle de Echegaray, 21, Centro, 28014 Madrid</p>.
+      <p class="coords">Calle de Echegaray, 21, Centro, 28014 Madrid</p>
     </div>
 
   </div>
