--- a/gilda_haus.html
+++ b/gilda_haus.html
@@ -57,7 +57,7 @@
   <div class="card">
     <h1>Pista 3</h1>
     <div class="emoji">🎶🍸🫒</div>
-    <p>Gildas con ritmo y cócteles con música. Un <strong>“HAUS”</strong> moderno donde la <strong>gilda</strong> y la noche comparten la vida.</p>
+    <p>Gildas con ritmo y cócteles con música. Un <strong>“HAUS”</strong> moderno donde la <strong>GILDA</strong> y la noche comparten la vida.</p>
     <button class="route-button" onclick="window.open('salmon_guru.html', '_blank')">
       Siguiente pista
     </button>
