--- a/la_gilderia.html
+++ b/la_gilderia.html
@@ -61,7 +61,7 @@
     <div class="emoji">🍷🫒</div>
     <p>Sigue las coordenadas para encontrar un lugar castizo donde Madrid se vuelve costumbre y las cañas saben a “de siempre”.</p>
     <p class="coords">40.43176, -3.70085</p>
-    <button class="route-button" onclick="window.open('gildas_haus.html', '_blank')">
+    <button class="route-button" onclick="window.open('gilda_haus.html', '_blank')">
       Siguiente pista
     </button>
     <style>
