--- a/salmon_guru.html
+++ b/salmon_guru.html
@@ -57,7 +57,7 @@
   <div class="card">
     <h1>Pista 4</h1>
     <div class="emoji">🐟🍹🎨</div>
-    <p>Donde el <strong>SALMON</strong> no nada, pero los cócteles sí son arte. Busca el templo <strong>GURU</strong> de mezclas en <strong>Echegaray</strong>.</p>
+    <p>Donde el <strong>SALMON</strong> no nada, pero los cócteles sí son arte. Busca el templo <strong>GURU</strong> de mezclas en <strong>ECHEGARAY</strong>.</p>
   </div>
 
 </body>
