--- a/index.html
+++ b/index.html
@@ -119,40 +119,52 @@
     const countdownEl = document.getElementById("countdown");
     const passwordBox = document.getElementById("passwordBox");
 
-    function updateCountdown() {
-      const now = new Date();
-      const diff = targetDate - now;
+function updateCountdown() {
+  const now = new Date();
+  const diff = targetDate - now;
 
-      const days = Math.floor(diff / (1000 * 60 * 60 * 24));
-      const hours = Math.floor((diff / (1000 * 60 * 60)) % 24); 
-      const minutes = Math.floor((diff / (1000 * 60)) % 60); 
-      const seconds = Math.floor((diff / 1000) % 60);
+  const days = Math.floor(diff / (1000 * 60 * 60 * 24));
+  const hours = Math.floor((diff / (1000 * 60 * 60)) % 24); 
+  const minutes = Math.floor((diff / (1000 * 60)) % 60); 
+  const seconds = Math.floor((diff / 1000) % 60);
 
-      // Actualizamos siempre el contador
-      if (diff > 0) {
-        countdownEl.textContent = `${pad(days)}:${pad(hours)}:${pad(minutes)}:${pad(seconds)}`;
-      } else {
-        countdownEl.textContent = "";
-      }
+  // Actualizamos siempre el contador
+  if (diff > 0) {
+    countdownEl.textContent =
+      `${pad(days)}:${pad(hours)}:${pad(minutes)}:${pad(seconds)}`;
+  } else {
+    countdownEl.textContent = "00:00:00:00";
+  }
 
-      // Mostrar contraseña parcial según días
-      if (days <= 0) {
-        passwordBox.textContent = "Contraseña: EL CALCETIN DE PAPELES DE MI TIA PAQUI";
-      } else if (days == 1) {
-        passwordBox.textContent = "Contraseña: EL CALCETIN DE PAPELES";
-      } else if (days == 2) {
-        passwordBox.textContent = "Contraseña: EL CALCETIN DE";
-      } else if (days == 3) {
-        passwordBox.textContent = "Contraseña: EL CALCETIN";
-      } else if (days == 4) {
-        passwordBox.textContent = "Contraseña: EL";
-      } else {
-        passwordBox.textContent = "";
-      }
-    }
+  // Mostrar contraseña parcial según días restantes
+  if (diff <= 0) {
+    passwordBox.textContent =
+      'Contraseña: EL CALCETIN DE PAPELES DE MI TIA FELIPE DICE QUE LA CONTRASEÑA ES "07022026"';
+  }
+  else if (days === 0) {
+    passwordBox.textContent =
+      "Contraseña: EL CALCETIN DE PAPELES DE MI TIA FELIPE DICE QUE";
+  }
+  else if (days === 1) {
+    passwordBox.textContent =
+      "Contraseña: EL CALCETIN DE PAPELES DE MI TIA FELIPE";
+  }
+  else if (days === 2) {
+    passwordBox.textContent =
+      "Contraseña: EL CALCETIN DE PAPELES";
+  }
+  else if (days === 3) {
+    passwordBox.textContent =
+      "Contraseña: EL CALCETIN";
+  }
+  else {
+    passwordBox.textContent = "";
+  }
+}
 
-    updateCountdown();
-    setInterval(updateCountdown, 1000);
+updateCountdown();
+setInterval(updateCountdown, 1000);
+
 
     function sayYes() {
       document.body.innerHTML = `
