--- a/gilda_haus.html
+++ b/gilda_haus.html
@@ -4,53 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Pista 3</title>
-  <style>
-    * {
-      box-sizing: border-box;
-      font-family: 'Segoe UI', system-ui, sans-serif;
-    }
-
-    body {
-      margin: 0;
-      height: 100vh;
-      background: linear-gradient(135deg, #fdfaf6, #f5efe8); /* blanco roto */
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 20px;
-    }
-
-    .card {
-      background: #fdfaf6; /* blanco roto */
-      padding: 40px 30px;
-      border-radius: 20px;
-      box-shadow: 0 20px 40px rgba(0,0,0,0.15);
-      text-align: center;
-      max-width: 350px;
-      width: 90%;
-      border: 2px solid #c72c41; /* carmesí oscuro */
-    }
-
-    h1 {
-      margin-bottom: 20px;
-      color: #c72c41; /* carmesí oscuro */
-    }
-
-    p {
-      color: #555;
-      font-size: 1.1rem;
-      margin: 10px 0;
-    }
-
-    .emoji {
-      font-size: 2rem;
-      margin-bottom: 15px;
-    }
-
-    strong {
-      color: #c72c41;
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
@@ -61,26 +15,6 @@
     <button class="route-button" onclick="window.open('salmon_guru.html', '_blank')">
       Siguiente pista
     </button>
-    <style>
-      .route-button {
-        background: #c72c41;           /* carmesí oscuro */
-        color: #fdfaf6;                /* blanco roto */
-        border: 2px solid #c72c41;     /* borde carmesí */
-        border-radius: 30px;            /* redondeado elegante */
-        padding: 12px 25px;
-        font-size: 1rem;
-        font-family: 'Segoe UI', system-ui, sans-serif;
-        cursor: pointer;
-        transition: all 0.2s ease;
-        margin-top: 20px;
-        display: inline-block;
-      }
-    
-      .route-button:hover {
-        background: #a72635;           /* un poco más oscuro al hover */
-        transform: scale(1.05);
-      }
-    </style>
   </div>
 
 </body>
