--- a/salmon_guru.html
+++ b/salmon_guru.html
@@ -4,60 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Pista 4</title>
-  <style>
-    * {
-      box-sizing: border-box;
-      font-family: 'Segoe UI', system-ui, sans-serif;
-    }
-
-    body {
-      margin: 0;
-      height: 100vh;
-      background: linear-gradient(135deg, #fdfaf6, #f5efe8); /* blanco roto */
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 20px;
-    }
-
-    .card {
-      background: #fdfaf6; /* blanco roto */
-      padding: 40px 30px;
-      border-radius: 20px;
-      box-shadow: 0 20px 40px rgba(0,0,0,0.15);
-      text-align: center;
-      max-width: 350px;
-      width: 90%;
-      border: 2px solid #c72c41; /* carmesí oscuro */
-    }
-
-    h1 {
-      margin-bottom: 20px;
-      color: #c72c41; /* carmesí oscuro */
-    }
-
-    p {
-      color: #555;
-      font-size: 1.1rem;
-      margin: 10px 0;
-    }
-
-    .emoji {
-      font-size: 2rem;
-      margin-bottom: 15px;
-    }
-
-    strong {
-      color: #c72c41;
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
   <div class="card">
     <h1>Pista 4</h1>
     <div class="emoji">🐟🍹🎨</div>
-    <p>Donde el <strong>SALMON</strong> no nada, pero los cócteles sí son arte. Busca el templo <strong>GURU</strong> de mezclas en <strong>ECHEGARAY</strong>.</p>
+    <p>Donde el <strong>SALMON</strong> no nada, pero los cócteles sí son arte. Busca el templo <strong>GURU</strong> de mezclas en <a href="https://www.google.com/maps/search/?api=1&query=Calle%20de%20Echegaray%2C%2021%2C%20Madrid" target="_blank" rel="noopener"><strong>ECHEGARAY</strong></a>.</p>
   </div>
 
 </body>
