--- a/ruta.html
+++ b/ruta.html
@@ -71,12 +71,14 @@
     border-bottom: none;
   }
 </style>
+<script src="gate.js"></script>
+<script src="messages.js"></script>
 </head>
 <body>
 
   <div class="card">
-    <h1>Ruta de Gildas y Cócteles</h1>
-    <h2>San Valentín</h2>
+    <h1 data-msg="ruta.h1"></h1>
+    <h2 data-msg="ruta.h2"></h2>
 
     <div class="pista">
       <h2>Pista 1: Doble & Gilda</h2>
