--- a/doble_&_gilda.html
+++ b/doble_&_gilda.html
@@ -5,17 +5,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Pista 1</title>
   <link rel="stylesheet" href="styles.css">
+  <script src="gate.js"></script>
+  <script src="messages.js"></script>
 </head>
 <body>
+  <script>
+    // Comprobar acceso: si no hay token válido, mostrar overlay de no acceso
+    if (typeof checkAccess === 'function') {
+      if (!checkAccess()) {
+        document.addEventListener('DOMContentLoaded', function(){ showNoAccessOverlay(); });
+      }
+    }
+  </script>
 
   <div class="card">
-    <h1>Pista 1</h1>
+    <h1 data-msg="pista1.title"></h1>
     <div class="emoji">🫒🍺</div>
-    <p>Aquí comienza el aperitivo, donde aceitunas, anchoas y picante viven.</p>
-    <p>Busca la casa donde la <strong>GILDA</strong> dobla su encanto en Chamberí.</p>
-    <p><strong>Dirección:</strong> <a href="https://www.google.com/maps/search/?api=1&query=Calle%20de%20Santa%20Engracia%2C%20105%2C%20Madrid" target="_blank" rel="noopener">Calle de Santa Engracia, 105</a></p>
-    <button class="route-button" onclick="window.open('la_gilderia.html', '_blank')">
-      Siguiente pista
+    <p data-msg="pista1.desc"></p>
+    <p><strong data-msg="pista1.address_label"></strong> <a href="https://www.google.com/maps/search/?api=1&query=Calle%20de%20Santa%20Engracia%2C%20105%2C%20Madrid" target="_blank" rel="noopener" data-msg="pista1.address"></a></p>
+    <button class="route-button" onclick="openPathWithToken('la_gilderia.html','_blank')" data-msg="route.next">
     </button>
   </div>
 
