--- a/index.html
+++ b/index.html
@@ -4,96 +4,22 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>San Valentín</title>
-  <style>
-    * {
-      box-sizing: border-box;
-      font-family: 'Segoe UI', system-ui, sans-serif;
-    }
-
-    body {
-      margin: 0;
-      height: 100vh;
-      background: linear-gradient(135deg, #fdfaf6, #f5efe8);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      flex-direction: column;
-    }
-
-    .card {
-      background: #fdfaf6;
-      padding: 40px 30px;
-      border-radius: 20px;
-      box-shadow: 0 20px 40px rgba(0,0,0,0.15);
-      text-align: center;
-      max-width: 350px;
-      width: 90%;
-      border: 2px solid #c72c41;
-      margin-bottom: 20px;
-    }
-
-    h1 {
-      margin-bottom: 30px;
-      color: #c72c41;
-    }
-
-    .buttons {
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-      position: relative;
-    }
-
-    button {
-      padding: 12px 25px;
-      font-size: 16px;
-      border-radius: 30px;
-      border: none;
-      cursor: pointer;
-      transition: all 0.2s ease;
-    }
-
-    #yes {
-      background: #c72c41;
-      color: #fdfaf6;
-    }
-
-    #yes:hover {
-      background: #a72635;
-      transform: scale(1.05);
-    }
-
-    #no {
-      background: #f5efe8;
-      color: #c72c41;
-      border: 2px solid #c72c41;
-      position: relative;
-    }
-
-    #passwordBox {
-      padding: 15px;
-      border: 1px solid #c72c41;
-      border-radius: 10px;
-      font-size: 1rem;
-      color: #c72c41;
-      background: #fdfaf6;
-      min-height: 24px;
-    }
-
-  </style>
+  <link rel="stylesheet" href="styles.css">
+  <script src="gate.js"></script>
+  <script src="messages.js"></script>
 </head>
-<body>
+<body class="index-page">
 
   <div class="card">
-    <h1>Feli</h1>
-    <h1>¿Quieres ser mi San Valentín?</h1>
+    <h1 data-msg="index.title1"></h1>
+    <h1 data-msg="index.title2"></h1>
 
     <!-- CONTADOR -->
     <strong><p id="countdown" style="color:#e98693; font-size:1.5rem; margin-bottom:30px;"></p></strong>
 
     <div class="buttons">
-      <button id="yes" onclick="sayYes()">Sí</button>
-      <button id="no">No</button>
+      <button id="yes" onclick="sayYes()" data-msg="index.yes"></button>
+      <button id="no" data-msg="index.no"></button>
     </div>
   </div>
 
@@ -105,11 +31,114 @@
   <script>
     const noBtn = document.getElementById("no");
 
-    noBtn.addEventListener("mouseover", () => {
-      const x = Math.random() * 500 - 250;
-      const y = Math.random() * 500 - 250;
-      noBtn.style.transform = `translate(${x}px, ${y}px) rotate(${Math.random() * 30 - 15}deg)`;
-    });
+      // Asegura que el botón tenga `position: fixed` sin provocar salto brusco
+      function ensureFixedPosition() {
+        const cs = getComputedStyle(noBtn);
+        if (cs.position !== 'fixed') {
+          const rect = noBtn.getBoundingClientRect();
+          // quitar transición momentáneamente para evitar salto visual
+          const prevTransition = noBtn.style.transition;
+          noBtn.style.transition = 'none';
+          noBtn.style.position = 'fixed';
+          noBtn.style.left = rect.left + 'px';
+          noBtn.style.top = rect.top + 'px';
+          noBtn.style.zIndex = '9999';
+          // forzar reflow para que el cambio sin transición se aplique
+          void noBtn.offsetWidth;
+          // restaurar transición suave (coincide con styles.css)
+          noBtn.style.transition = prevTransition || 'left 0.4s cubic-bezier(.2,.9,.2,1), top 0.4s cubic-bezier(.2,.9,.2,1), transform 0.25s ease';
+        }
+      }
+
+      // Obtiene dimensiones del viewport, usa visualViewport cuando está disponible
+      function getViewportMetrics() {
+        if (window.visualViewport) {
+          return {
+            width: window.visualViewport.width,
+            height: window.visualViewport.height,
+            offsetLeft: window.visualViewport.offsetLeft || 0,
+            offsetTop: window.visualViewport.offsetTop || 0,
+          };
+        }
+        return { width: window.innerWidth, height: window.innerHeight, offsetLeft: 0, offsetTop: 0 };
+      }
+
+      // Mueve el botón "No" por la pantalla sin salirse del viewport
+      function moveNoButtonRandomly() {
+        ensureFixedPosition();
+        const btnRect = noBtn.getBoundingClientRect();
+        const btnW = btnRect.width;
+        const btnH = btnRect.height;
+        const padding = 12; // margen desde los bordes
+
+        const vp = getViewportMetrics();
+        const maxX = Math.max(vp.width - btnW - padding, padding);
+        const maxY = Math.max(vp.height - btnH - padding, padding);
+
+        const randomX = Math.floor(Math.random() * (maxX - padding)) + padding;
+        const randomY = Math.floor(Math.random() * (maxY - padding)) + padding;
+
+        // Si hay visualViewport, añadir offsets para posicionar correctamente
+        const leftPos = (vp.offsetLeft || 0) + randomX;
+        const topPos = (vp.offsetTop || 0) + randomY;
+
+        noBtn.style.left = leftPos + 'px';
+        noBtn.style.top = topPos + 'px';
+        noBtn.style.transform = `rotate(${Math.random() * 30 - 15}deg)`;
+      }
+
+      // Evitar movimiento inmediato en taps táctiles: si el usuario toca y suelta rápido,
+      // consideramos que es un tap y no movemos el botón. Si mantiene el dedo, movemos.
+      let touchMoveTimeout = null;
+
+      noBtn.addEventListener('pointerenter', (e) => {
+        if (e.pointerType === 'mouse') moveNoButtonRandomly();
+      });
+
+      noBtn.addEventListener('pointerdown', (e) => {
+        if (e.pointerType === 'touch') {
+          // programar movimiento tras breve retraso; si se suelta antes, se cancela
+          touchMoveTimeout = setTimeout(() => {
+            moveNoButtonRandomly();
+            touchMoveTimeout = null;
+          }, 180);
+        } else {
+          // mouse clicks provocan movimiento inmediato
+          moveNoButtonRandomly();
+        }
+      }, {passive: true});
+
+      noBtn.addEventListener('pointerup', () => {
+        if (touchMoveTimeout) { clearTimeout(touchMoveTimeout); touchMoveTimeout = null; }
+      });
+
+      noBtn.addEventListener('pointercancel', () => {
+        if (touchMoveTimeout) { clearTimeout(touchMoveTimeout); touchMoveTimeout = null; }
+      });
+
+      // Recalcula posición si la ventana cambia de tamaño para mantener el botón dentro
+      function clampNoButtonIntoViewport() {
+        ensureFixedPosition();
+        const vp = getViewportMetrics();
+        const btnRect = noBtn.getBoundingClientRect();
+        const btnW = btnRect.width;
+        const btnH = btnRect.height;
+        const padding = 12;
+
+        let left = parseFloat(noBtn.style.left) || btnRect.left;
+        let top = parseFloat(noBtn.style.top) || btnRect.top;
+
+        const maxX = Math.max(vp.width - btnW - padding, padding);
+        const maxY = Math.max(vp.height - btnH - padding, padding);
+
+        left = Math.min(Math.max(left, padding), maxX);
+        top = Math.min(Math.max(top, padding), maxY);
+
+        noBtn.style.left = left + 'px';
+        noBtn.style.top = top + 'px';
+      }
+
+      window.addEventListener('resize', clampNoButtonIntoViewport);
       function pad(num) {
         return String(num).padStart(2, "0");
       }
@@ -137,28 +166,35 @@
       }
     
       // Mostrar contraseña parcial según días restantes
-      if (diff <= 0) {
-        passwordBox.textContent =
-          'Contraseña: EL CALCETIN DE PAPELES DE MI TIA FELIPE DICE QUE LA CONTRASEÑA ES "07022026"';
-      }
-      else if (days === 0) {
-        passwordBox.textContent =
-          "Contraseña: EL CALCETIN DE PAPELES DE MI TIA FELIPE DICE QUE";
-      }
-      else if (days === 1) {
-        passwordBox.textContent =
-          "Contraseña: EL CALCETIN DE PAPELES DE MI TIA FELIPE";
-      }
-      else if (days === 2) {
-        passwordBox.textContent =
-          "Contraseña: EL CALCETIN DE PAPELES";
-      }
-      else if (days === 3) {
-        passwordBox.textContent =
-          "Contraseña: EL CALCETIN";
-      }
-      else {
-        passwordBox.textContent = "";
+      if (typeof getMessage === 'function') {
+        if (diff <= 0) {
+          passwordBox.textContent = getMessage('index.password_full');
+        } else if (days === 0) {
+          passwordBox.textContent = getMessage('index.password_day0');
+        } else if (days === 1) {
+          passwordBox.textContent = getMessage('index.password_day1');
+        } else if (days === 2) {
+          passwordBox.textContent = getMessage('index.password_day2');
+        } else if (days === 3) {
+          passwordBox.textContent = getMessage('index.password_day3');
+        } else {
+          passwordBox.textContent = "";
+        }
+      } else {
+        // fallback al texto original
+        if (diff <= 0) {
+          passwordBox.textContent = 'Contraseña: EL CALCETIN DE PAPELES DE MI TIA FELIPE DICE QUE LA CONTRASEÑA ES "07022026"';
+        } else if (days === 0) {
+          passwordBox.textContent = 'Contraseña: EL CALCETIN DE PAPELES DE MI TIA FELIPE DICE QUE';
+        } else if (days === 1) {
+          passwordBox.textContent = 'Contraseña: EL CALCETIN DE PAPELES DE MI TIA FELIPE';
+        } else if (days === 2) {
+          passwordBox.textContent = 'Contraseña: EL CALCETIN DE PAPELES';
+        } else if (days === 3) {
+          passwordBox.textContent = 'Contraseña: EL CALCETIN';
+        } else {
+          passwordBox.textContent = "";
+        }
       }
     }
     
@@ -179,42 +215,42 @@
           flex-direction: column;
         ">
           <h1 style="font-size:2.5rem; color:#c72c41; margin-bottom: 20px;">
-            Sabía que dirías que sí
+            ${typeof getMessage === 'function' ? getMessage('index.sayYes_header') : 'Sabía que dirías que sí'}
           </h1>
 
-          <div style="margin-top:20px; display:flex; gap:10px; justify-content:center;">
-            <input 
-              id="passwordInput"
-              type="text"
-              placeholder="Introduce la contraseña"
-              style="
-                padding:12px 20px;
-                border-radius:30px;
-                border:2px solid #c72c41;
-                font-size:16px;
-                outline:none;
-              "
-            />
+              <div style="margin-top:20px; display:flex; gap:10px; justify-content:center;">
+                <input 
+                  id="passwordInput"
+                  type="text"
+                  placeholder="${typeof getMessage === 'function' ? getMessage('index.input_placeholder') : 'Introduce la contraseña'}"
+                  style="
+                    padding:12px 20px;
+                    border-radius:30px;
+                    border:2px solid #c72c41;
+                    font-size:16px;
+                    outline:none;
+                  "
+                />
 
-            <button 
-              id="tryBtn"
-              onclick="checkPassword()"
-              style="
-                padding:12px 25px;
-                font-size:16px;
-                border-radius:30px;
-                border:none;
-                cursor:pointer;
-                background:#c72c41;
-                color:#fdfaf6;
-                transition:all 0.2s ease;
-              "
-              onmouseover="this.style.transform='scale(1.05)'"
-              onmouseout="this.style.transform='scale(1)'"
-            >
-              Probar
-            </button>
-          </div>
+                <button 
+                  id="tryBtn"
+                  onclick="checkPassword()"
+                  style="
+                    padding:12px 25px;
+                    font-size:16px;
+                    border-radius:30px;
+                    border:none;
+                    cursor:pointer;
+                    background:#c72c41;
+                    color:#fdfaf6;
+                    transition:all 0.2s ease;
+                  "
+                  onmouseover="this.style.transform='scale(1.05)'"
+                  onmouseout="this.style.transform='scale(1)'"
+                >
+                  ${typeof getMessage === 'function' ? getMessage('index.try_button') : 'Probar'}
+                </button>
+              </div>
 
           <p id="result" style="margin-top:20px; color:#c72c41; font-size:1rem;"></p>
         </div>
@@ -222,20 +258,44 @@
     }
 
     function checkPassword() {
-      const input = document.getElementById("passwordInput").value.trim().toUpperCase();
+      const inputEl = document.getElementById("passwordInput");
+      const tryBtn = document.getElementById("tryBtn");
       const result = document.getElementById("result");
 
       const correctPassword = "07022026";
 
-      // Desaparece input y botón y muestra mensaje de paciencia
-      document.getElementById("passwordInput").style.display = "none";
-      document.getElementById("tryBtn").style.display = "none";
-      result.textContent = "Ten paciencia… mañana tendrás otra palabra";
+      // Desactivar inputs y mostrar spinner de carga
+      inputEl.disabled = true;
+      tryBtn.disabled = true;
 
-      // Si es correcta, redirige en otra pestaña
-      if (input === correctPassword) {
-        window.open("doble_&_gilda.html", "_blank");
-      }
+      const overlay = document.createElement('div');
+      overlay.className = 'spinner-overlay';
+      overlay.innerHTML = '<div class="spinner" aria-hidden="true"></div>';
+      document.body.appendChild(overlay);
+
+      const value = String(inputEl.value || '').trim();
+
+      setTimeout(() => {
+        // Quitar spinner
+        if (overlay && overlay.parentNode) overlay.parentNode.removeChild(overlay);
+
+        // Comparación simple y exacta (sin seguridad adicional)
+        if (value === correctPassword) {
+          // Navegar en la MISMA ventana para evitar bloqueadores de popups.
+          (function(){
+            const path = "doble_&_gilda.html";
+            const token = encodeURIComponent(sessionStorage.getItem('sv_token') || '');
+            const sep = path.indexOf('?') === -1 ? '?' : '&';
+            const url = path + sep + 'sv=' + token;
+            window.location.href = url;
+          })();
+        } else {
+          // Quitar input y botón después de la ruleta y mostrar solo el mensaje
+          if (inputEl && inputEl.parentNode) inputEl.parentNode.removeChild(inputEl);
+          if (tryBtn && tryBtn.parentNode) tryBtn.parentNode.removeChild(tryBtn);
+          result.textContent = (typeof getMessage === 'function') ? getMessage('index.result_wait') : "Ten paciencia… mañana tendrás otra palabra";
+        }
+      }, 1400);
     }
   </script>
 
